force-app/main/default/objects/Employee__c/fields/Date_of_joining__c.field-meta.xml
<CustomField>
    <fullName>Date_of_joining__c</fullName>
    <label>Date of joining</label>
    <required>true</required>
    <type>Date</type>
</CustomField>