force-app/main/default/objects/Employee__c/fields/Experience_in_Non_Technical_field__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Non_Technical_field__c</fullName>
    <label>Experience in Non-Technical field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresher</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>0-1 years</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>3-5 years</fullName>
            </value>
            <value>
                <fullName>5 yrs above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>