force-app/main/default/objects/Employee__c/fields/Last_working_day__c.field-meta.xml
<CustomField>
    <fullName>Last_working_day__c</fullName>
    <formula>Resignation_Date__c  + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last working day</label>
    <type>Date</type>
</CustomField>