force-app/main/default/objects/Employee__c/fields/Managerr__c.field-meta.xml
<CustomField>
    <fullName>Managerr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managerr</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Role_of_employee__r.Name__c</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>