force-app/main/default/objects/Employee__c/fields/Resignation_Date__c.field-meta.xml
<CustomField>
    <fullName>Resignation_Date__c</fullName>
    <label>Resignation Date</label>
    <type>Date</type>
</CustomField>