force-app/main/default/objects/Employee__c/fields/Role_of_employee__c.field-meta.xml
<CustomField>
    <fullName>Role_of_employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role of employee</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>