force-app/main/default/objects/Employee__c/fields/Salary_Credited_till_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Credited_till_Date__c</fullName>
    <label>Salary Credited till Date</label>
    <summarizedField>Salary_Details__c.Gross_Salary__c</summarizedField>
    <summaryForeignKey>Salary_Details__c.Credited_to_emp__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>