force-app/main/default/objects/Employee__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>