force-app/main/default/objects/Employee__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>