force-app/main/default/objects/Employee__c/recordTypes/Non_technical.recordType-meta.xml
<RecordType>
    <fullName>Non_technical</fullName>
    <active>true</active>
    <label>Non-technical</label>
</RecordType>