force-app/main/default/objects/Employee__c/validationRules/Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Age</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (Age__c   &lt;=  21)  ||  (Age__c   &gt;=  30),true,false)</errorConditionFormula>
    <errorMessage>Age must be between 21-30</errorMessage>
</ValidationRule>