force-app/main/default/objects/Employee__c/validationRules/Age_should_be_greater_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_should_be_greater_than_18</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (Age__c  &lt; 18),true,false)</errorConditionFormula>
    <errorMessage>Age must be greater than 18</errorMessage>
</ValidationRule>