force-app/main/default/objects/Employee__c/validationRules/Last_working_date_cannot_be_greater_JD.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_working_date_cannot_be_greater_JD</fullName>
    <active>true</active>
    <errorConditionFormula>Last_working_day__c   &lt;   Date_of_joining__c</errorConditionFormula>
    <errorMessage>Last working date cannot be greater than joining date.</errorMessage>
</ValidationRule>