force-app/main/default/objects/Employee__c/validationRules/Resignation_date_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Resignation_date_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>Is_on_Notice_Period__c  = true &amp;&amp; ISBLANK(Resignation_Date__c)</errorConditionFormula>
    <errorMessage>Resignation Date cannot be null</errorMessage>
</ValidationRule>