force-app/main/default/objects/Employee__c/validationRules/SSN_number_should_not_be_greater_than_10.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_number_should_not_be_greater_than_10</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( SSN__c )  &lt;&gt; 10</errorConditionFormula>
    <errorMessage>SSN should  be of 10 digit</errorMessage>
</ValidationRule>