force-app/main/default/objects/Employee__c/listViews/Active_Employees.listView-meta.xml
<ListView>
    <fullName>Active_Employees</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Date_of_joining__c</columns>
    <columns>Last_working_day__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Employees</label>
</ListView>