force-app/main/default/objects/Employee__c/listViews/Employees_on_Notice_Period.listView-meta.xml
<ListView>
    <fullName>Employees_on_Notice_Period</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Is_on_Notice_Period__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_on_Notice_Period__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Employees on Notice Period</label>
    <sharedTo>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>