force-app/main/default/objects/Employee__c/listViews/Inactive_Employees.listView-meta.xml
<ListView>
    <fullName>Inactive_Employees</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_on_Notice_Period__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Inactive Employees</label>
    <sharedTo>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>